--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
-body {margin: 0;
-margin-top: 0;
-text-align: center;
+body {
+  margin: 0;
+  margin-top: 0;
+  text-align: center;
   font-family: 'Merriweather', serif;
   color: #40514E;
 
 }
+
+
 
 hr {
 
@@ -19,20 +22,22 @@ hr {
 
 
 }
+
 h1 {
-margin: 3.125rem auto 0;
+  margin: 3.125rem auto 0;
   font-family: 'Architects Daughter', cursive;
   font-size: 4rem;
   color: #66BFBF;
 }
+
 h2 {
-font-family: 'Montserrat', sans-serif;
-font-size: 2.5rem;
-font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
   color: #66BFBF;
 }
 
-h3{
+h3 {
   font-family: 'Montserrat', sans-serif;
   color: #11999E;
 
@@ -47,15 +52,15 @@ h3{
 }
 
 .top-cloud {
-position: absolute;
-top: 3.125rem;
-right: 18.75rem;
+  position: absolute;
+  top: 3.125rem;
+  right: 18.75rem;
 
 }
 
 .bottom-cloud {
   position: absolute;
-bottom: 300px;
+  bottom: 300px;
   left: 300px;
 
 }
@@ -65,10 +70,16 @@ bottom: 300px;
 
 }
 
-.middle-container {
+.websites {
+  background-color: #EAF6F6;
+  padding: 3rem 0 6rem;
 }
 
-.profile{
+.websites a:hover {
+  color: darkgoldenrod;
+}
+
+.profile {
   margin: 70px auto;
 }
 
@@ -84,11 +95,10 @@ bottom: 300px;
 
 }
 
-.my-skills-img
-{
+.my-skills-img {
   width: 25%;
   float: left;
-margin-right: 30px;
+  margin-right: 30px;
 
 }
 
@@ -117,44 +127,44 @@ a:hover {
 }
 
 .BUTTON_BAE {
-   background: #11999E;
-   background-image: -webkit-linear-gradient(top, #11999E, #11999E);
-   background-image: -moz-linear-gradient(top, #11999E, #11999E);
-   background-image: -ms-linear-gradient(top, #11999E, #11999E);
-   background-image: -o-linear-gradient(top, #11999E, #11999E);
-   background-image: -webkit-gradient(to bottom, #11999E, #11999E);
-   -webkit-border-radius: 20px;
-   -moz-border-radius: 20px;
-   border-radius: 5px;
-   color: #FFFFFF;
-   font-family: 'Montserrat', sans-serif;
-   font-size: 15px;
-   font-weight: 100;
-   padding: 10px;
-   -webkit-box-shadow: 1px 1px 5px 0 #000000;
-   -moz-box-shadow: 1px 1px 5px 0 #000000;
-   box-shadow: 1px 1px 5px 0 #000000;
-   text-shadow: 1px 1px 5px #000000;
-   border: solid #337FED 1px;
-   text-decoration: none;
-   display: inline-block;
-   cursor: pointer;
-   text-align: center;
-   margin: 15px;
+  background: #11999E;
+  background-image: -webkit-linear-gradient(top, #11999E, #11999E);
+  background-image: -moz-linear-gradient(top, #11999E, #11999E);
+  background-image: -ms-linear-gradient(top, #11999E, #11999E);
+  background-image: -o-linear-gradient(top, #11999E, #11999E);
+  background-image: -webkit-gradient(to bottom, #11999E, #11999E);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  font-weight: 100;
+  padding: 10px;
+  -webkit-box-shadow: 1px 1px 5px 0 #000000;
+  -moz-box-shadow: 1px 1px 5px 0 #000000;
+  box-shadow: 1px 1px 5px 0 #000000;
+  text-shadow: 1px 1px 5px #000000;
+  border: solid #337FED 1px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  margin: 15px;
 }
 
 .BUTTON_BAE:hover {
-   border: solid #33C0ED 1px;
-   background: #1EC1D0;
-   background-image: -webkit-linear-gradient(top, #1EC1D0, #3DF6F3);
-   background-image: -moz-linear-gradient(top, #1EC1D0, #3DF6F3);
-   background-image: -ms-linear-gradient(top, #1EC1D0, #3DF6F3);
-   background-image: -o-linear-gradient(top, #1EC1D0, #3DF6F3);
-   background-image: -webkit-gradient(to bottom, #1EC1D0, #3DF6F3);
-   -webkit-border-radius: 20px;
-   -moz-border-radius: 20px;
-   border-radius: 5px;
-   text-decoration: none;
+  border: solid #33C0ED 1px;
+  background: #1EC1D0;
+  background-image: -webkit-linear-gradient(top, #1EC1D0, #3DF6F3);
+  background-image: -moz-linear-gradient(top, #1EC1D0, #3DF6F3);
+  background-image: -ms-linear-gradient(top, #1EC1D0, #3DF6F3);
+  background-image: -o-linear-gradient(top, #1EC1D0, #3DF6F3);
+  background-image: -webkit-gradient(to bottom, #1EC1D0, #3DF6F3);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 5px;
+  text-decoration: none;
 }
 
 .contact-me {
